--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -4,11 +4,42 @@
     --green-alt: #219150;
     --lightGreen: rgb(130, 246, 153);
     --darkGreen: rgb(2, 44, 2);
+    --jet: hsl(0, 0%, 22%);
+    --eerie-black-1: hsl(240, 2%, 13%);
+    --smoky-black: white;
+    --white-1: hsl(0, 0%, 100%);
+    --white-2: hsl(0, 0%, 98%);
+    --orange-yellow-crayola: hsl(45, 100%, 72%);
+    --light-gray-70: hsla(0, 0%, 84%, 0.7);
+
+       --fs-1: 24px;
+       --fs-2: 18px;
+       --fs-3: 17px;
+       --fs-4: 16px;
+       --fs-5: 15px;
+       --fs-6: 14px;
+       --fs-7: 13px;
+       --fs-8: 11px;
+
+       --fw-300: 300;
+       --fw-400: 400;
+       --fw-500: 500;
+       --fw-600: 600;
+
+       --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
+       --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
+       --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
+       --shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
+       --shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
+     
+       --transition-1: 0.25s ease;
+       --transition-2: 0.5s ease-in-out;
+     
     /* rgb(5, 39, 43) */
 }
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow: clip auto;
 }
 @font-face {
     font-family: roboto;
@@ -33,6 +64,13 @@ ul {
     padding: 0;
     list-style: none;
 }
+.h2,
+.h3,
+.h4,
+.h5 {
+  color: var(--darkGreen);
+  text-transform: capitalize;
+}
 button,
 input,
 textarea {
@@ -53,9 +91,18 @@ textarea {
     resize: none;
 }
 body {
-    overflow-x: hidden;
+    overflow-x: clip;
     font-size: clamp(1.2rem, 1.2vw, 1.6rem)!important;
+    font-family: roboto, sans-serif;
+    min-height: 60vh;
 }
+img, ion-icon, a, button, time, span { display: block; }
+
+::selection {
+    background: var(--darkGreen);
+    color: var(--smoky-black);
+  }
+  :focus { outline-color: var(--orange-yellow-crayola); }
 /* custom styles */
 .bg-green {
     background: #27ae60!important;
@@ -162,87 +209,643 @@ svg {
     font-size: 1.4rem;
 } 
 /* faq end of accordion */
-/* dashboard styles */
-.dashboard-side-nav {
-    width: 4.5rem;
-    left: .5rem;
-    height: 95vh;
-    margin-top: 2.5vh;
-    border-radius: 10px;
-    overflow: hidden;
 
-    .dashboard-side-nav-menu li {
-        width: 100%;
-        height: 2.5rem;
-        margin-bottom: 0.5rem;
-        border-radius: 30px;
-        overflow: hidden;
+/* main website */
+.sidebar,
+  article {
+    background: var(--eerie-black-2);
+    border: 1px solid var(--jet);
+    border-radius: 20px;
+    padding: 15px;
+    box-shadow: var(--shadow-1);
+    z-index: 1;
+  }
+  .separator {
+    width: 100%;
+    height: 1px;
+    background: var(--jet);
+    margin: 16px 0;
+  }
+  
+  article { display: none; }
+  
+  article.active {
+    display: block;
+    animation: fade 0.5s ease backwards;
+    background-color: var(--greenOpac);
+  }
+  
+  @keyframes fade {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  .h2 { font-size: var(--fs-1); }
+  
+  .h3 { font-size: var(--fs-2); }
+  
+  .h4 { font-size: var(--fs-4); }
+  
+  .h5 {
+    font-size: var(--fs-7);
+    font-weight: var(--fw-500);
+  }
+  
+  .article-title {
+    position: relative;
+    padding-bottom: 7px;
+  }
+  
+  .article-title::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 30px;
+    height: 3px;
+    background: var(--green);
+    border-radius: 3px;
+  }
+  
+  
+    /*-----------------------------------*\
+    #MAIN
+  \*-----------------------------------*/
+  
+  .main-container {
+    margin: 15px 12px;
+    margin-bottom: 75px;
+    min-width: 259px;
+  }
+   
+  /*-----------------------------------*\
+    #SIDEBAR
+  \*-----------------------------------*/
+  
+  .sidebar {
+    margin-bottom: 15px;
+    max-height: 112px;
+    overflow: hidden;
+    transition: var(--transition-2);
+    background-color: var(--green);
+  }
+  
+  .sidebar.active { max-height: 405px; }
+  
+  .sidebar-info {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+  }
+  
+  
+  .info-content .name {
+    color: var(--white-2);
+    font-size: var(--fs-3);
+    font-weight: var(--fw-500);
+    letter-spacing: -0.25px;
+    margin-bottom: 10px;
+  }
+  
+  .info-content .title {
+    color: var(--white-1);
+    background: var(--onyx);
+    font-size: var(--fs-4);
+    font-weight: var(--fw-300);
+    width: max-content;
+    padding: 3px 12px;
+    border-radius: 8px;
+  }
+  
+  .info_more-btn {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    border-radius: 0 15px;
+    font-size: 13px;
+    color: var(--orange-yellow-crayola);
+    background: var(--border-gradient-onyx);
+    padding: 10px;
+    box-shadow: var(--shadow-2);
+    transition: var(--transition-1);
+    z-index: 1;
+  }
+  
+  .info_more-btn::before {
+    content: "";
+    position: absolute;
+    inset: 1px;
+    border-radius: inherit;
+    background: var(--bg-gradient-jet);
+    transition: var(--transition-1);
+    z-index: -1;
+  }
+  
+  .info_more-btn:hover,
+  .info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
+  
+  .info_more-btn:hover::before,
+  .info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
+  
+  .info_more-btn span { display: none; }
+  
+  .sidebar-info_more {
+    opacity: 0;
+    visibility: hidden;
+    transition: var(--transition-2);
+  }
+  
+  .sidebar.active .sidebar-info_more {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .contacts-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+  
+  .contact-item {
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+  
+  .contact-info {
+    max-width: calc(100% - 46px);
+    width: calc(100% - 46px);
+  }
+  
+  .contact-title {
+    color: var(--light-gray-70);
+    font-size: var(--fs-8);
+    text-transform: uppercase;
+    margin-bottom: 2px;
+  }
+  
+  .contact-info :is(.contact-link, time, address) {
+    color: var(--white-2);
+    font-size: var(--fs-7);
+  }
+  
+  .contact-info address { font-style: normal; }
+  
+  .social-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    padding-bottom: 4px;
+    padding-left: 7px;
+  }
+  
+  .social-item .social-link {
+    color: var(--light-gray-70);
+    font-size: 18px;
+  }
+  
+  .social-item .social-link:hover { color: var(--light-gray); }
+ 
+  /*-----------------------------------*\
+    #NAVBAR
+  \*-----------------------------------*/
+  
+  .navbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: var(--green);
+    backdrop-filter: blur(10px);
+    border: 1px solid var(--jet);
+    border-radius: 12px 12px 0 0;
+    box-shadow: var(--shadow-2);
+    z-index: 5;
+  }
+
+  .navbar-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+    margin-bottom: 0;
+  }
+  
+  .navbar-link {
+    color: var(--darkGreen);
+    font-size: var(--fs-4);
+    padding: 20px 7px;
+    background-color: var(--green);
+    transition: color var(--transition-1);
+  }
+
+  .navbar-link:hover,
+  .navbar-link:focus { color: var(--light-gray-70); }
+  
+  .navbar-link.active { 
+    color: var(--white-1); 
+    background: var(--darkGreen);
+    border-radius: 10px;
+  }
+  .logout-link {
+    display: flex!important;
+    align-items: center;
+    gap: .5rem;
+    flex-wrap: nowrap;
+  }
+
+  .article-title { margin-bottom: 30px; }
+
+  
+  @media (min-width: 580px) {
+  
+    /**
+     * CUSTOM PROPERTY
+     */
+  
+    :root {
+  
+      /**
+       * typography
+       */
+  
+      --fs-1: 32px;
+      --fs-2: 24px;
+      --fs-3: 26px;
+      --fs-4: 18px;
+      --fs-6: 15px;
+      --fs-7: 15px;
+      --fs-8: 12px;
+  
     }
-    .dashboard-side-nav-menu a {
-        width: 100%;
-        height: 100%;
-        display: block;
+
+    /**
+     * #REUSED STYLE
+     */
+  
+    .sidebar, article {
+      width: 520px;
+      margin-inline: auto;
+      padding: 30px;
+    }
+  
+    .article-title {
+      font-weight: var(--fw-600);
+      padding-bottom: 15px;
+    }
+  
+    .article-title::after {
+      width: 40px;
+      height: 5px;
+    }
+  
+    .icon-box {
+      width: 48px;
+      height: 48px;
+      border-radius: 12px;
+      font-size: 18px;
+    }
+  
+    /**
+     * #MAIN
+     */
+  
+    .main-container {
+      margin-top: 60px;
+      margin-bottom: 100px;
+    }
+
+    /**
+     * #SIDEBAR
+     */
+  
+    .sidebar {
+      max-height: 180px;
+      margin-bottom: 30px;
+    }
+  
+    .sidebar.active { max-height: 584px; }
+  
+    .sidebar-info { gap: 25px; }
+  
+    .avatar-box { border-radius: 30px; }
+  
+    .avatar-box img { width: 120px; }
+  
+    .info-content .name { margin-bottom: 15px; }
+  
+    .info-content .title { padding: 5px 18px; }
+  
+    .info_more-btn {
+      top: -30px;
+      right: -30px;
+      padding: 10px 15px;
+    }
+  
+    .info_more-btn span {
+      display: block;
+      font-size: var(--fs-8);
+    }
+  
+    .info_more-btn ion-icon { display: none; }
+  
+    .separator { margin: 32px 0; }
+  
+    .contacts-list { gap: 20px; }
+  
+    .contact-info {
+      max-width: calc(100% - 64px);
+      width: calc(100% - 64px);
+    }
+  
+    /**
+     * #NAVBAR
+     */
+  
+    .navbar { border-radius: 20px 20px 0 0; }
+  
+    .navbar-list { gap: 20px; }
+  
+    .navbar-link { --fs-8: 14px; }
+  
+    /**
+     * #ABOUT
+     */
+  
+    .about .article-title { margin-bottom: 20px; }
+  
+    .about-text { margin-bottom: 40px; }
+  
+  
+  /**
+   * responsive larger than 768px screen
+   */
+  
+  @media (min-width: 768px) {
+  
+    /**
+     * REUSED STYLE
+     */
+  
+    .sidebar, article { width: 700px; }  
+ 
+    /**
+     * SIDEBAR
+     */
+    .contacts-list {
+      grid-template-columns: 1fr 1fr;
+      gap: 30px 15px;
+    }
+    /**
+     * NAVBAR
+     */
+  
+    .navbar-link { --fs-8: 15px; }
+
+  /**
+   * responsive larger than 1024px screen
+   */
+  
+  @media (min-width: 1024px) {
+  
+    /**
+     * CUSTOM PROPERTY
+     */
+  
+    :root {
+  
+      /**
+      * shadow
+      */
+  
+      --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.125);
+      --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.125);
+      --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.125);
+  
+    }
+    /**
+     * REUSED STYLE
+     */
+  
+    .sidebar, article {
+      width: 950px;
+      box-shadow: var(--shadow-5);
+    }
+
+    /**
+     * MAIN 
+     */
+  
+    .main-container { margin-bottom: 60px; }
+  
+    .main-content {
+      position: relative;
+      width: max-content;
+      margin: auto;
+    }
+
+    /**
+     * NAVBAR
+     */
+  
+    .navbar {
+      position: absolute;
+      bottom: auto;
+      top: 0;
+      left: auto;
+      right: 0;
+      width: max-content;
+      border-radius: 0 20px;
+      padding: 0 20px;
+      box-shadow: none;
+    }
+  
+    .navbar-list {
+      gap: 30px;
+      padding: 0 20px;
+    }
+  
+    .navbar-link { font-weight: var(--fw-500); }
+
+  @media (min-width: 1250px) {
+  
+    /**
+     * RESET
+     */
+  
+    body::-webkit-scrollbar { width: 18px; }
+  
+    body::-webkit-scrollbar-track { background: var(--green-alt); }
+  
+    body::-webkit-scrollbar-thumb {
+      border: 2px solid var(--orange-yellow-crayola);
+      background: var(--darkGreen);
+      border-radius: 20px;
+      box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
+                  inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
+    }
+
+    body::-webkit-scrollbar-thumb:hover { background: rgb(5, 47, 119); }
+  
+    body::-webkit-scrollbar-button { height: 60px; }
+
+    /**
+     * REUSED STYLE
+     */
+  
+    .sidebar, article { width: auto; }
+  
+    article { min-height: 100%; }
+  
+    /**
+     * MAIN
+     */
+  
+    .main-container {
+      max-width: 1200px;
+      margin-inline: auto;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      gap: 25px;
+    }
+  
+    .main-content {
+      min-width: 75%;
+      width: 75%;
+      margin: 0;
+    }
+
+    /**
+     * SIDEBAR
+     */
+  
+    .sidebar {
+      position: sticky;
+      top: 60px;
+      max-height: max-content;
+      height: 100%;
+      margin-bottom: 0;
+      padding-top: 60px;
+      z-index: 1;
+    }
+  
+    .sidebar-info { flex-direction: column; }
+  
+    .avatar-box img { width: 150px; }
+  
+    .info-content .name {
+      white-space: nowrap;
+      text-align: center;
+    }
+  
+    .info-content .title { margin: auto; }
+  
+    .info_more-btn { display: none; }
+  
+    .sidebar-info_more {
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    .contacts-list { grid-template-columns: 1fr; }
+  
+    .contact-info :is(.contact-link) {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  
+    .contact-info :is(.contact-link, time, address) {
+      --fs-7: 14px;
+      font-weight: var(--fw-300);
+    }
+  
+    .separator:last-of-type {
+      margin: 15px 0;
+      opacity: 0;
+    }
+    .social-list { justify-content: center; }
+}
+}
+}
+}
+/* end of main container styles */
+
+/* body of each tab */
+/* home tab body */
+.stats-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 2rem;
+    grid-template-rows: 7em;
+    
+    .stat-box {
+        background-color: var(--green);
+        box-shadow: var(--shadow-1);
+        border-radius: 2rem;
         display: flex;
         align-items: center;
         justify-content: center;
-        color: white;
-        background-color: rgb(35, 117, 27);
-        font-weight: bold;
-        display: flex;
-        gap: .5rem;
-        line-height: 2em;
-        align-items: center;
-        justify-content: flex-start;
-        padding: 0.5rem;
-    }
-    .dashboard-side-nav-menu a.active {
-        background-color: var(--lightGreen);
-        color: var(--darkGreen);
-    }
-}
-.main-dashboard-container {
-    width: calc(100% - 17rem);
-    position: relative;
-    left: 16.5rem;
-    margin-right: 1rem;
-    height: 95vh;
-    margin-top: 2.5vh;
-    border-radius: 10px;
-    overflow: hidden;
+        gap: 1rem;
+        padding: 1rem;
+        transition: var(--transition-1);
 
-    .main-content-container {
-        width: 100%;
-        height: 85%;
-        padding: 2rem;
-        padding-bottom: 0;
-        background-color: var(--greenOpac);
-
-        .tab-content-box {
-            height: 85%;
-            padding: .5rem 1rem;
-            width: 100%;
-            overflow: hidden;
-            overflow-y: auto;
-            transform: scale(0);
-            position: absolute;
-            top: 62px;
-            left: 0;
-            transition: .5s ease-in-out;
-            -webkit-transition: .5s ease-in-out;
-            -ms-transition: .5s ease-in-out;
-            -moz-transition: .5s ease-in-out;
-            -o-transition: .5s ease-in-out;
+        &:is(:hover, :focus) {
+            background-color: var(--green-alt);
+            box-shadow: var(--shadow-2);
         }
-        .tab-content-box.active {
-            transform: scale(1);
+        .icon-box {
+            font-size: 2.5rem;
+            color: var(--white-2);
+            flex: 1;
+            height: 100%;
+            display: grid;
+            place-items: center;
+        }
+        .content-box {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            flex: 2;
+            gap: 0.5rem;
+
+            .stat-title {
+                font-size: 1.1rem;
+                font-weight: var(--fw-500);
+                color: var(--white-2);
+                margin-bottom: 0;
+            }
+            .stat-number {
+                font-size: 2rem;
+                font-weight: bold;
+                color: var(--white-2);
+                margin-bottom: 0;
+                letter-spacing: .1em;
+            }
         }
     }
-    .dashboard-footer {
-        width: 100%;
-        height: 2rem;
-        position: absolute;
-        bottom: 0;
-        left: 0;
+}
+/* end of home tab body */
+/* contacts tab */
+.contacts-row-data {
+    animation: fade 0.5s ease backwards;
+    -webkit-animation: fade 0.5s ease backwards;
+    -moz-animation: fade 0.5s ease backwards;
+    -o-animation: fade 0.5s ease backwards;
+
+    &.hide {
+        display: none;
+        animation: fade 0.5s ease backwards;
+        -webkit-animation: fade 0.5s ease backwards;
+        -moz-animation: fade 0.5s ease backwards;
+        -o-animation: fade 0.5s ease backwards;
     }
 }
-/* end of dashboard styles */
+
+/* end of contacts tab */
+/* end of body of each tab */
