--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -46,7 +46,7 @@
             {{ request.user.username }}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a href="#n" class="dropdown-item text-success logout-link" data-toggle="modal" data-target="#logout">
+            <a href="{% url 'logout' %}" class="dropdown-item text-success logout-link" data-toggle="modal" data-target="#logout">
               <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
               <span class="title">Logout</span>
             </a>
