--- a/home/templates/registration/logged_out.html
+++ b/home/templates/registration/logged_out.html
@@ -12,6 +12,6 @@ Logged out
 
 <p>{% translate "Thanks for spending some quality time with the Web site today." %}</p>
 
-<p><a href="{% url 'admin:index' %}">{% translate 'Log in again' %}</a></p>
+<p><a href="{% url 'login' %}">{% translate 'Log in again' %}</a></p>
 
 {% endblock %}
