--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -16,7 +16,7 @@
         <p class="title">dashboard</p>
       </div>
 
-      <button class="info_more-btn" data-sidebar-btn>
+      <button class="info_more-btn" data-sidebar-btn aria-label="sidebar menu toggle button">
         <i class="fas fa-plus"></i>
       </button>
 
@@ -49,6 +49,27 @@
             <a href="#n" class="dropdown-item text-success logout-link" data-toggle="modal" data-target="#logout">
               <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
               <span class="title">Logout</span>
+            </a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle txt-white" href="#" id="navbarDropdown" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-cog"></i>
+            settings
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a href="#n" class="dropdown-item text-success logout-link">
+              change password
+            </a>
+            <a href="#n" class="dropdown-item text-success logout-link">
+              change password
+            </a>
+            <a href="#n" class="dropdown-item text-success logout-link">
+              change password
+            </a>
+            <a href="#n" class="dropdown-item text-success logout-link">
+              change password
             </a>
           </div>
         </li>
@@ -114,7 +135,7 @@
         </li>
 
         <li class="navbar-item">
-          <button class="navbar-link" data-nav-link>Contact</button>
+          <button class="navbar-link" data-nav-link>Another</button>
         </li>
 
       </ul>
@@ -135,8 +156,8 @@
         <!-- start -->
         <div class="stat-box" tabindex="0">
           <div class="content-box">
-            <h3 class="stat-title">Total Users</h3>
-            <p class="stat-number">1,200</p>
+            <h3 class="stat-title">Total contacts</h3>
+            <p class="stat-number" id="total-contacts-stat-num"></p>
           </div>
           <div class="icon-box">
             <i class="fas fa-users"></i>
@@ -178,6 +199,70 @@
         <!-- end -->
       </section>
       <!-- end of stats section -->
+      <!-- itsready banner box -->
+      <div class="home-banner-box container bg-green-gradient my-5 p-2 rounded shadow ">
+        <div class="row justify-content-center flex-column align-items-center">
+          <div class="col-12 col-md-6">
+            <h2 class="banner-title display-4 text-uppercase text-white text-center">Itsready</h2>
+          </div>
+          <div class="col-12">
+            <p class="banner-text text-center text-white fz-xsm mxw-700 d-block mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum
+              voluptates. Quisquam, voluptatum voluptates.</p>
+          </div>
+        </div>
+      </div>
+      <!-- end of itsready banner box -->
+      <!-- details section -->
+      <style>
+        .card {
+          width: 15rem;
+        }
+        @media (max-width: 480px) {
+          .card {
+            width: 100%;
+          }
+        }
+      </style>
+      <div class="container">
+        <div class="row">
+
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-success">
+                  <i class="fas fa-sms"></i>
+                  Send messages to agents</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Via sms</h6>
+                <p class="card-text fz-xsm">"ITSREADY" enables you to effortlessly send SMS to your agents by saving their contacts on the designated webpage's contacts tab. Stay connected seamlessly!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-success">
+                  <i class="fas fa-sms"></i>
+                  Send messages to agents</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Via sms</h6>
+                <p class="card-text fz-xsm">"ITSREADY" enables you to effortlessly send SMS to your agents by saving their contacts on the designated webpage's contacts tab. Stay connected seamlessly!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-success">
+                  <i class="fas fa-sms"></i>
+                  Send messages to agents</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Via sms</h6>
+                <p class="card-text fz-xsm">"ITSREADY" enables you to effortlessly send SMS to your agents by saving their contacts on the designated webpage's contacts tab. Stay connected seamlessly!</p>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      <!-- end of details section -->
       <!-- end of home body -->
     </article>
 
@@ -217,7 +302,7 @@
       <!-- contacts tab body -->
       <!-- contacts-wrapper -->
       <div class="contacts-container">
-        <button class="add-contact-btn btn btn-primary ml-auto d-block mb-3" aria-label="add contact button" data-toggle="modal" data-target="#addcontact">
+        <button class="add-contact-btn btn btn-primary ml-auto d-block mb-3" aria-label="add contact button" data-toggle="modal" data-target="#addcontact" data-toggle="tooltip" data-placement="left" title="Add contact">
           <i class="fas fa-plus"></i>
         </button>
         <div class="top-bar d-flex justify-content-between align-items-center mb-3">
@@ -246,30 +331,14 @@
               <td>Mark</td>
               <td>Otto@gmail</td>
               <td>8786</td>
-              <td>
-                <button class="btn btn-sm btn-primary mr-2" aria-label="edit contact button">
-                  <i class="fas fa-edit"></i>
-                </button>
-                <button class="btn btn-sm btn-danger" aria-label="delete contact button">
-                  <i class="fas fa-trash"></i>
-                </button>
-              </td>
             </tr>
             <!-- end of table row start -->
             <!-- table row start -->
             <tr class="contacts-row-data">
               <th scope="row" data-index></th>
-              <td>Mark</td>
-              <td>Otto@gmail</td>
-              <td>8786</td>
-              <td>
-                <button class="btn btn-sm btn-primary mr-2" aria-label="edit contact button">
-                  <i class="fas fa-edit"></i>
-                </button>
-                <button class="btn btn-sm btn-danger" aria-label="delete contact button">
-                  <i class="fas fa-trash"></i>
-                </button>
-              </td>
+              <td>Felix</td>
+              <td>feboapong@gmail</td>
+              <td>0548285798</td>
             </tr>
             <!-- end of table row start -->
           </tbody>
@@ -291,8 +360,7 @@
   </div>
 
 </main>
-
-
+<!-- end of main container -->
 
 <!-- ===================modal popups======== -->
 <!-- modal popup for logout -->
@@ -313,25 +381,120 @@
   </div>
 </div>
 <!-- end of modal popup for logout -->
+<!-- modal popup for delete contact -->
+<div class="modal fade" id="delContact" data-delete-contact-modal tabindex="-1" role="dialog" aria-labelledby="delContactLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="delContactLabel">Are you sure you want to delete this contact?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" id="delete-confirm-btn" data-dismiss="modal">Delete contact</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of modal popup for logout -->
 <!-- modal popup for add contact -->
 <div class="modal fade" id="addcontact" tabindex="-1" role="dialog" aria-labelledby="addcontactlabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="logoutLabel">Are you sure you want to log out?</h5>
+        <h5 class="modal-title" id="addcontactlabel">Add a contact to the contact list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
+        <!-- add contact form -->
+        <form id="add-contact-form">
+          <div class="form-group">
+            <label for="add-contact-name">Name</label>
+            <input type="text" class="form-control" id="add-contact-name" placeholder="Contact name" required>
+          </div>
+          <div class="form-group">
+            <label for="add-contact-email">Email</label>
+            <input type="email" class="form-control" id="add-contact-email" placeholder="Contact email" required>
+          </div>
+          <div class="form-group">
+            <label for="add-contact-num">Number</label>
+            <input type="number" class="form-control" id="add-contact-num" placeholder="Contact number (add country code)" required>
+          </div>
+        </form>
+        <!-- end of add contact form -->
       </div>
       <div class="modal-footer">
-        <a href="{% url 'logout' %}" type="button" class="btn btn-success">Log out</a>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" id="add-contact-submit-btn" data-dismiss="modal">Add contact</button>
       </div>
     </div>
   </div>
 </div>
 <!-- end of modal popup for add contact -->
+<!-- modal popup for edit contact -->
+<div class="modal fade" id="editContact" tabindex="-1" role="dialog" aria-labelledby="editcontactlabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editcontactlabel">Edit this contact</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- edit contact form -->
+        <form id="edit-contact-form" action="#">
+          <div class="form-group">
+            <label for="contactName">Name</label>
+            <input type="text" class="form-control" id="edit-contact-name" placeholder="Contact name" required>
+          </div>
+          <div class="form-group">
+            <label for="contactNum">Number</label>
+            <input type="number" class="form-control" id="edit-contact-phone" placeholder="Contact number (add country code)" required>
+          </div>
+          <div class="form-group">
+            <label for="contactEmail">Email</label>
+            <input type="email" class="form-control" id="edit-contact-email" placeholder="Contact email" required>
+          </div>
+        </form>
+        <!-- end of edit contact form -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        <button type="button" id="updateContact" class="btn btn-primary" data-dismiss="modal">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of modal popup for add contact -->
+<!-- modal popup for send message -->
+<div class="modal fade" id="send-message" tabindex="-1" role="dialog" aria-labelledby="sendmessagelabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="sendmessagelabel">Send message to this contact</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <form action="#">
+        <div class="form-group">
+          <label for="compose-message">Example textarea</label>
+          <textarea class="form-control" id="compose-message" rows="5"></textarea>
+        </div>
+       </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        <button type="button" id="updateContact" class="btn btn-success" data-dismiss="modal">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of modal popup for send message -->
 {% endblock %}
