--- a/home/templates/dashboard/dashboard_base.html
+++ b/home/templates/dashboard/dashboard_base.html
@@ -34,22 +34,28 @@
         mirror: false,
         anchorPlacement: 'top-bottom'
     })
-//contact implementation
-document.getElementById("contacts-search-bar").onkeyup = function() {
-    //using to filter the contacts
-    var search = document.getElementById("contacts-search-bar").value;    
 
-    fetch('/contacts/search/?search='+search + '/')
-    .then((response) => {
-        return response.json();
-    })
-    .then((data) => {
-alert(data)
-
-        }
-    })
-}
-alert("hello"")
      </script>
+
+     <script>
+        //filtering contacts
+document.getElementById("contacts-search-bar").onkeyup = function(e) {
+var search = document.getElementById("contacts-search-bar").value.toLowerCase();
+
+fetch('http://localhost:8000/api/search-contact/?search='+search)
+.then(response => response.json())
+.then(data => {
+ alert(data[1].contact_name)
+    
+})
+.catch(error => {
+alert(error)
+})
+}
+
+//end of filtering contacts
+
+    
+    </script>
 </body>
 </html>
