--- a/home/templates/dashboard/dashboard_base.html
+++ b/home/templates/dashboard/dashboard_base.html
@@ -46,7 +46,7 @@ const csrf_token = '{{ csrf_token }}'
 
 
 window.addEventListener("load", ()=>{
-    fetch(`http://localhost:30/api/get_contacts/?userid=${userId}`).then((res) => res.json()).then((data) => {
+    fetch(`http://localhost:8000/api/get_contacts/?userid=${userId}`).then((res) => res.json()).then((data) => {
         const contact = data
        // displaying all the contacts data fetched from the api 
         contact.map((contact) => {
@@ -85,7 +85,7 @@ window.addEventListener("load", ()=>{
         const addContactEmailVal = addContactEmail.value
         const addContactNumVal = addContactNum.value
 
-        fetch("http://localhost:30/api/add_contact/", {
+        fetch("http://localhost:8000/api/add_contact/", {
            method: "POST",
             headers: {
             "Content-Type": "application/json",
@@ -97,8 +97,9 @@ window.addEventListener("load", ()=>{
                 contact_phone_number: addContactNumVal,
                 userid: userId
             }),
-        }).then((res) => res.json()).then((data) => {
-            console.log(data)
+        }).then((res) => res.json())
+        .then((data) => {
+            //alert(data.message)
             if(data.status === "success"){
                 window.location.reload()
             }
