--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -413,10 +413,9 @@
               <th scope="col"></th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class="contacts-row-data" id="contacts-row-data">
             <!-- table row start -->
-            <tr class="contacts-row-data" id="contacts-row-data">
-            </tr>
+            
             <!-- end of table row -->
           </tbody>
         </table>
