--- a/home/templates/dashboard/dashboard.html
+++ b/home/templates/dashboard/dashboard.html
@@ -63,10 +63,6 @@
             padding: 1rem;
             resize: none;
             margin-bottom: 1rem;
-
-            &::placeholder {
-              text-transform: capitalize;
-            }
       }
         }
         & textarea {
@@ -77,10 +73,6 @@
         padding: 1rem;
         resize: none;
         margin-bottom: 1rem;
-
-        &::placeholder {
-          text-transform: capitalize;
-        }
       }
       }
       .contact-list-box {
@@ -639,7 +631,7 @@
           </div>
         </div>
         <div class="contact-list-box">
-          <h4 class="heading">Select SMS contact here:</h4>
+          <h4 class="heading">Select contact here:</h4>
           <form action="#n">
             <div class="col-auto">
               <div class="input-pgroup mb-2">
